add resp to current, update swagger doc, add route get all users
